--- a/ui.ui
+++ b/ui.ui
@@ -105,7 +105,7 @@
              <number>-1</number>
             </property>
             <property name="value">
-             <number>-1</number>
+             <number>10</number>
             </property>
            </widget>
           </item>
@@ -169,6 +169,28 @@
            <widget class="QLabel" name="perceptLabel">
             <property name="text">
              <string/>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_5">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="title">
+          <string>Visual Controls</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <item>
+           <widget class="QCheckBox" name="showMemoryBox">
+            <property name="text">
+             <string>Show Memory</string>
             </property>
            </widget>
           </item>
