--- a/ui.ui
+++ b/ui.ui
@@ -54,6 +54,9 @@
             <property name="minimum">
              <number>1</number>
             </property>
+            <property name="maximum">
+             <number>999</number>
+            </property>
            </widget>
           </item>
           <item row="1" column="0">
@@ -103,6 +106,9 @@
            <widget class="QSpinBox" name="gridSpin">
             <property name="minimum">
              <number>-1</number>
+            </property>
+            <property name="maximum">
+             <number>200</number>
             </property>
             <property name="value">
              <number>10</number>
