--- a/ui.ui
+++ b/ui.ui
@@ -106,6 +106,20 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="0">
+           <widget class="QCheckBox" name="autoStepBox">
+            <property name="text">
+             <string>Auto step</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QCheckBox" name="autoNewBox">
+            <property name="text">
+             <string>Auto New</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
